Ensure project builds on Java 12